<resources>
    <string name="app_name">JATTT</string>
    <string name="heading">Tic-Tac-Toe</string>
    <string name="play">Spiel starten</string>
    <string name="ttt_image_description">Tic-Tac-Toe Icon</string>
    <string name="board_image_description">Board Icon</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
</resources>