<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TicTacToeActivity" android:backgroundTint="#000000" android:background="#000000"
        android:contentDescription="@string/board_image_description">
    <ImageView
            android:layout_width="341dp"
            android:layout_height="357dp" app:srcCompat="@mipmap/ic_board" android:id="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="206dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="168dp" android:contentDescription="@string/board_image_description"/>
    <Button
            android:text="@string/button_0"
            android:layout_width="95dp"
            android:layout_height="98dp" android:id="@+id/button1"
            android:layout_marginEnd="228dp" app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3" android:layout_marginStart="18dp"
            app:layout_constraintTop_toTopOf="@+id/imageView3" android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:layout_marginBottom="235dp"
            android:backgroundTint="#00FFFFFF" android:foregroundTint="@color/black" android:textColor="#00FFFFFF"/>
    <Button
            android:text="@string/button_1"
            android:layout_width="87dp"
            android:layout_height="98dp" android:id="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/imageView3" android:layout_marginTop="24dp"
            android:layout_marginEnd="128dp" app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3" android:layout_marginStart="127dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:layout_marginBottom="235dp"
            android:backgroundTint="#00FFFFFF" android:textColor="#00FFFFFF"/>
    <Button
            android:text="@string/button_2"
            android:layout_width="97dp"
            android:layout_height="96dp" android:id="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/imageView3" android:layout_marginStart="228dp"
            android:layout_marginEnd="15dp" app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" android:layout_marginTop="26dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:layout_marginBottom="235dp"
            android:backgroundTint="#00FFFFFF" android:textColor="#00FFFFFF"/>
    <Button
            android:text="@string/button_3"
            android:layout_width="92dp"
            android:layout_height="79dp" android:id="@+id/button4"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:layout_marginTop="140dp" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:layout_marginBottom="137dp" android:layout_marginEnd="228dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" app:layout_constraintStart_toStartOf="@+id/imageView3"
            android:layout_marginStart="21dp" android:backgroundTint="#00FFFFFF" android:textColor="#00FFFFFF"/>
    <Button
            android:text="@string/button_4"
            android:layout_width="87dp"
            android:layout_height="79dp" android:id="@+id/button5"
            android:layout_marginEnd="127dp" app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" android:layout_marginTop="142dp"
            app:layout_constraintStart_toStartOf="@+id/imageView3" android:layout_marginStart="128dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:layout_marginBottom="136dp"
            android:backgroundTint="#00FFFFFF" android:textColor="#00FFFFFF"/>
    <Button
            android:text="@string/button_5"
            android:layout_width="98dp"
            android:layout_height="79dp" android:id="@+id/button6"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:layout_marginTop="140dp" android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:layout_marginBottom="137dp" app:layout_constraintStart_toStartOf="@+id/imageView3"
            android:layout_marginStart="229dp" android:backgroundTint="#00FFFFFF" android:textColor="#00FFFFFF"/>
    <Button
            android:text="@string/button_6"
            android:layout_width="89dp"
            android:layout_height="89dp" android:id="@+id/button7"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:layout_marginTop="236dp" android:layout_marginEnd="231dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:layout_marginBottom="31dp" app:layout_constraintStart_toStartOf="@+id/imageView3"
            android:layout_marginStart="21dp" android:backgroundTint="#00FFFFFF" android:textColor="#00FFFFFF"/>
    <Button
            android:text="@string/button_7"
            android:layout_width="84dp"
            android:layout_height="87dp" android:id="@+id/button8"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:layout_marginTop="240dp" android:layout_marginEnd="129dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:layout_marginBottom="30dp" app:layout_constraintStart_toStartOf="@+id/imageView3"
            android:layout_marginStart="128dp" android:backgroundTint="#00FFFFFF" android:textColor="#00FFFFFF"/>
    <Button
            android:text="@string/button_8"
            android:layout_width="102dp"
            android:layout_height="88dp" android:id="@+id/button9"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:layout_marginTop="242dp" android:layout_marginEnd="11dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:layout_marginBottom="27dp" app:layout_constraintStart_toStartOf="@+id/imageView3"
            android:layout_marginStart="228dp" android:backgroundTint="#00FFFFFF" android:textColor="#00FFFFFF"/>
</androidx.constraintlayout.widget.ConstraintLayout>