<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/heading"
            android:layout_width="wrap_content"
            android:layout_height="60dp" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="36sp"
            android:textAlignment="center" android:textStyle="bold"/>
    <Button
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="47dp" android:id="@+id/play_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="252dp"
            android:backgroundTint="#454545" android:foregroundTint="#FFFFFF" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.489"/>
    <ImageView
            android:layout_width="285dp"
            android:layout_height="217dp" app:srcCompat="@mipmap/ic_ttt_round" android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="63dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:contentDescription="@string/ttt_image_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>